# clickloop

./: .gitignore  AGENTS.md  README.md  TODO.md  clickloop.py  config.example.json  config.json  pyproject.toml
data/config/: coordinates.json.example
src/clickloop/: __init__.py  __main__.py  logging_config.py
src/clickloop/commands/: __init__.py  pick.py  run.py
src/clickloop/core/: __init__.py  clicking.py  config.py  monitors.py
src/clickloop/utils/: __init__.py  arger.py  logging.py
tests/: __init__.py  conftest.py  test_clicking.py  test_config.py  test_coordinates.py  test_monitors.py
tests/commands/: __init__.py  test_pick.py  test_run.py
tests/core/: __init__.py  test_clicking.py  test_config.py  test_config_save.py  test_monitor_helpers.py  test_monitors.py
