[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickloop"
version = "0.0.1"
description = "Automated mouse clicking script for Windows with multi-monitor support"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Chris"}
]
keywords = ["automation", "mouse", "clicking", "windows", "multi-monitor"]

[project.scripts]
click = "clickloop.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clickloop"]

[project.optional-dependencies]
dev = [
    "pylint>=4.0.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0"
]
